name:                q
version:             0.1.0.0
synopsis:            Functional queues with amortized constant time operations.
description:
    *
    This package provides two functional implementations of queues based on
    those presented in Chris Okasaki's "Purely Functional Data Structures".
    Data.Queue.Simple operates in amortized constant time; Data.Queue.Realtime
    trades higher overhead for worst-case constant time. There is also an
    instance for Data.Sequence's 'Seq', but it is somewhat slower than
    'SimpleQueue' without any realtime guarantees.
homepage:            https://github.com/isturdy/q
bug-reports:         https://github.com/isturdy/q/issues
license:             PublicDomain
license-file:        UNLICENSE
author:              Ian Sturdy
maintainer:          sturdyi12@mail.wlu.edu
category:            Data Structures
build-type:          Simple
cabal-version:       >=1.8
stability:	     experimental
tested-with:
    GHC == 7.6.2

library
  exposed-modules:
    Data.Queue.Simple
    Data.Queue.Realtime
    Data.Queue.Class
  GHC-Options:
    -Wall
  build-depends:
    base >= 4 && < 5,
    containers == 0.5.*

source-repository head
  type: git
  location: https://github.com/isturdy/q

test-suite q-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Tests.hs

  build-depends:
    q,
    base ==4.6.*,
    containers == 0.5.*,
    HUnit ==1.2.5.*,
    test-framework,
    test-framework-hunit,
    QuickCheck ==2.5.*,
    test-framework-quickcheck2

benchmark q-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Benchmarks.hs
  build-depends:
    q,
    base,
    containers,
    criterion